--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -6,8 +6,12 @@
 		<h3>You can make the following GET requests<h3>
 		<ul>
 			<li>/file/sample.html -- returns the content of the file sample.html</li>
-			<li>/json -- returns a json of the /random request</a></li>
-			<li>/random -- returns index.html</a></li>
+			<li>/json -- returns a json of the /random request</li>
+			<li>/random -- returns index.html</li>
+			<li>/multiply?num1=[INTEGER]&num2=[INTEGER] -- multiplies 2 integers<li>
+			<li>/madlibs?word1=[STRING]&word2=[STRING] -- puts 2 words in a random sentence<li>
+			<li>/rps?player1=[rock|paper|scissors]&player2=[rock|paper|scissors] -- Decides outcome of Rock, Paper, Scissors game between players<li>
+			
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
